--- a/templates/base.html
+++ b/templates/base.html
@@ -78,14 +78,15 @@
 <nav class="main-nav-fixed noprint" id="main-nav">
     <div class="navigation">
     <ul class="nav nav-stacked">
-    <li><a class="dropdown-collapse in"  href="#">
+    <li class="">
+        <a class="dropdown-collapse in"  href="#">
         <i class="icon-map-marker"></i>
-        2018年春季学期
+        <span>2018年春季</span>
         <i class="icon-angle-down angle-down"></i>
     </a>
 <ul class="nav nav-stacked">
             {% for town in town_list %}
-                <li><a href="{% url 'get_school' town.id %}"><i class="icon-map-marker"></i>{{ town }}({{ town.schools }})</a></li>
+                <li class=""><a href="{% url 'get_school' town.id %}"><i class="icon-map-marker"></i>{{ town }}({{ town.schools }})</a></li>
             {% endfor %}
         </ul>
     </li>
