--- a/templates/hele/school.html
+++ b/templates/hele/school.html
@@ -7,7 +7,7 @@
     <li><a href="#"> {{ school_town.name }}</a></li>
 {% endblock %}
 {% block content %}
-    <table class="table table-view transparent">
+    <table class="table responsive-table table-view transparent">
     <caption><h3>学校列表</h3></caption>
     <thead>
     <tr>
